--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "node index.js"
   },
+  "engines": {
+  "node": "6.11.0",
+  "npm": "5.6.0"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ram-1998/twitter-streamer.git"
